# lvgl_osmesa_llvm6

./: .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DX8GL_AUDIT.md  PLANNING.md  README.md  TASKS.md  WEBGPU_GUIDE.md  WEBGPU_IMPROVEMENTS.md  analyze_frame_colors.py  analyze_ppm.py  build_and_run_webgpu_demo.sh  check_colors.py  compile.sh  cube_output.txt  dx8_cube_frame_00.ppm  dx8_cube_frame_01.ppm  dx8_cube_frame_02.ppm  dx8_cube_frame_03.ppm  dx8_cube_frame_04.ppm  dx8_ndc_test.ppm  dx8_simple_test.ppm  dx8_triangle_test.ppm  dx8gl_commands_frame_0000.txt  dx8gl_commands_frame_0001.txt  dx8gl_commands_frame_0002.txt  dx8gl_commands_frame_0003.txt  dx8gl_commands_frame_0004.txt  dx8gl_commands_frame_0005.txt  dx8gl_commands_frame_0006.txt  dx8gl_commands_frame_0007.txt  dx8gl_commands_frame_0008.txt  dx8gl_commands_frame_0009.txt  dx8gl_shader_00.frag  dx8gl_shader_00.vert  dx8gl_shader_01.vert  dx8gl_shader_02.frag  dx8wrapper-1.md  (+9 more)
build-emscripten/: CMakeCache.txt
cmake/: GetLLVMLibs.cmake  RelocatableConfig.cmake  SetupRelocatable.cmake  install_llvm_minimal.cmake  relocatable-build.patch  setup_env.sh.in
docs/: TEST_LOGGING.md
ext/dx8gl/: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_EMSCRIPTEN.md  TEST_AUTOMATION.md  WebGPU_Backend.md  build_emscripten.sh  cmake_install.cmake  run_tests.sh  serve_debug.py  serve_emscripten.py
ext/dx8gl/build-emscripten/: CMakeCache.txt
ext/dx8gl/build-wasm/: CMakeCache.txt
ext/dx8gl/docs/: hud_font_system.md
ext/dx8gl/examples/: webgpu_test.cpp
ext/dx8gl/include/: dx8gl_cpp.h
ext/dx8gl/lib/glm/: CMakeLists.txt
ext/dx8gl/lib/lib_webgpu/: CMakeLists.txt
ext/dx8gl/samples/: CMakeLists.txt  CTestConfig.cmake  minimal_dx8gl_test.cpp  shell.html  shell_fullscreen.html
ext/dx8gl/samples/device_reset/: CMakeLists.txt  README.md  device_reset_test.cpp
ext/dx8gl/samples/shader_test/: CMakeLists.txt  shader_test.cpp
ext/dx8gl/samples/webgpu-demo/: build_dx8gl.sh  dx8_webgpu_demo.cpp  dx8gl_demo.html  serve.py
ext/dx8gl/scripts/: run_backend_test.sh
ext/dx8gl/src/: blue_screen.h  command_buffer.cpp  command_buffer.h  cube_texture_support.cpp  cube_texture_support.h  d3d8.h  d3d8_additional_swapchain.cpp  d3d8_additional_swapchain.h  d3d8_com_wrapper.cpp  d3d8_com_wrapper.h  d3d8_com_wrapper_additions.cpp  d3d8_constants.h  d3d8_cpp_interfaces.h  d3d8_cubetexture.cpp  d3d8_cubetexture.h  d3d8_device.cpp  d3d8_device.h  d3d8_game.h  d3d8_indexbuffer.cpp  d3d8_indexbuffer.h  d3d8_interface.cpp  d3d8_interface.h  d3d8_missing_stubs.cpp  d3d8_surface.cpp  d3d8_surface.h  d3d8_swapchain.cpp  d3d8_swapchain.h  d3d8_texture.cpp  d3d8_texture.h  d3d8_types.h  d3d8_vertexbuffer.cpp  d3d8_vertexbuffer.h  d3d8_volume.cpp  d3d8_volume.h  d3d8_volumetexture.cpp  d3d8_volumetexture.h  d3dx8.h  d3dx8_core.h  d3dx_compat.h  d3dx_math.cpp  (+79 more)
ext/dx8gl/test/: CMakeLists.txt  backend_param_test.h  gl_stubs.cpp  golden_image_utils.h  test_additional_swapchain.cpp  test_alpha_blending.cpp  test_async_simple.cpp  test_backend_selection.cpp  test_clip_status.cpp  test_com_wrapper_complete.cpp  test_com_wrapper_threading.cpp  test_command_buffer_async.cpp  test_cross_backend_enhanced.cpp  test_cross_backend_rendering.cpp  test_cube_texture.cpp  test_cursor_management.cpp  test_d3dx_color.cpp  test_d3dx_math.cpp  test_d3dx_surface_loading.cpp  test_device_caps_parity.cpp  test_device_reset.cpp  test_dx8gl_core_api.cpp  test_framebuffer_correctness.cpp  test_hud_font.cpp  test_lod_dirty_logic.cpp  test_matrix_multiplication.cpp  test_matrix_pipeline.cpp  test_multi_texcoords.cpp  test_multisampling.cpp  test_palette_and_device_info.cpp  test_render_states.cpp  test_shader_cache_persistence.cpp  test_shader_cache_resize.cpp  test_shader_cache_resize_simple.cpp  test_shader_cache_simple.cpp  test_shader_constant_batching.cpp  test_shader_constants.cpp  test_shader_hot_reload.cpp  test_shader_program_cache.cpp  test_shader_program_linking.cpp  (+14 more)
logs/: dx8_cube_run_20250804_104215.txt  dx8_cube_run_20250804_104458.txt  dx8_cube_run_20250804_104635.txt  dx8_cube_run_20250804_110101.txt  dx8_cube_run_20250804_112810.txt  dx8_cube_run_20250804_152118.txt  dx8_cube_run_20250804_153404.txt  dx8_cube_run_20250804_154105.txt  dx8_cube_run_20250804_154140.txt  dx8_cube_run_20250804_154310.txt  dx8_cube_run_20250804_154423.txt  dx8_cube_run_20250804_154900.txt  dx8_cube_run_20250804_155341.txt  dx8_cube_run_20250804_155802.txt  dx8_cube_run_20250804_181452.txt  dx8_cube_run_20250804_201709.txt  dx8_cube_run_20250804_202651.txt  dx8_cube_run_20250804_202953.txt  dx8_cube_run_20250804_203116.txt  dx8_cube_run_20250804_213047.txt  dx8_cube_run_20250804_213241.txt  dx8_cube_run_20250804_213317.txt  dx8_cube_run_20250804_213432.txt  dx8_cube_run_20250804_214026.txt  dx8_cube_run_20250804_214203.txt  dx8_cube_run_20250804_214350.txt  dx8_cube_run_20250804_214908.txt  dx8_cube_run_20250804_225201.txt  dx8_cube_run_20250805_000849.txt  dx8_cube_run_20250805_002115.txt  dx8_cube_run_20250805_003437.txt  (+4 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake  dx8_ndc_test.cpp  dx8_single_frame.cpp  gl_triangle_test.cpp  simple_triangle.cpp  test_indexed_xyzrhw.cpp  test_loading_screen.cpp  test_mixed_vertices.cpp  test_xyzrhw.cpp
src/dx8_backend_test/: CMakeLists.txt  main.cpp
src/dx8_cube/: CMakeLists.txt  CMakeLists.txt.relocatable  Makefile  cmake_install.cmake  main.cpp  sample_shaders.txt
src/dx8_simple_test/: CMakeLists.txt  main.cpp
src/dx8_triangle/: CMakeLists.txt  main.cpp
src/egl_backend_test/: CMakeLists.txt  main.cpp
src/lvgl_hello/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/lvgl_osmesa/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/lvgl_platform/: CMakeLists.txt  Makefile  cmake_install.cmake  lvgl_platform.cpp  lvgl_platform.h
src/osmesa_test/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test_lvgl_canvas/: CMakeLists.txt  main.cpp
src/test_lvgl_platform/: CMakeLists.txt  main.cpp
src/test_static_canvas/: CMakeLists.txt  main.cpp
(+34 files in other folders)
